--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=microservicio
+
+server.port=${PORT:8080}
+
 spring.mvc.view.prefix=/META-INF/resources/
 spring.mvc.view.suffix=.xhtml
 #  configuracion de color de pagina
